// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`baseline: an app asks for a saved run (Get from dashboard) > asks the user, then answers with the run's rows and writes this to the transfer log 1`] = `
{
  "dialogStillOpen": false,
  "envelope": {
    "from": "dashboard",
    "id": "(the request's id)",
    "payload": {
      "dataType": "payroll-result",
      "meta": {
        "label": "ABC Co Ltd",
        "period": "2026-10",
      },
      "ok": true,
      "rows": "(6 rows, checked above)",
    },
    "to": "pdf-editor",
    "type": "response-data",
    "version": 1,
  },
  "targetOrigin": "https://noor1290.github.io",
  "transferLog": [],
}
`;

exports[`baseline: the 2026-09 sample > is sent like this to an app from a saved run 1`] = `
[
  {
    "Address": "Mauritius",
    "Age 60+": "No",
    "Allowances": 0,
    "BRN": "C1234567",
    "Basic Salary": 18000,
    "CSG": 559.05,
    "Company Name": "ABC Co Ltd",
    "EDF": 390000,
    "EDF (monthly)": 30000,
    "Emoluments": 18635,
    "Full time / Part time": "Full Time",
    "Govt Increment": 635,
    "Gross Pay": 18635,
    "ID": "X0000000000001",
    "Levy": 270,
    "NSF": 449.5,
    "Net Pay": 18169.12,
    "New Basic Salary": 18635,
    "Other names": "JANE",
    "PAYE": 0,
    "PRGF": 838.57,
    "Surname": "DOE",
    "Total": 0,
    "Total MRA contributions": 2583,
    "Total deductions": 465.88,
    "Travelling": 0,
    "VAT": "12%",
  },
  {
    "Address": "Mauritius",
    "Age 60+": "No",
    "Allowances": 0,
    "BRN": "C1234567",
    "Basic Salary": 24500,
    "CSG": 754.05,
    "Company Name": "ABC Co Ltd",
    "EDF": 390000,
    "EDF (monthly)": 30000,
    "Emoluments": 25135,
    "Full time / Part time": "Full Time",
    "Govt Increment": 635,
    "Gross Pay": 25135,
    "ID": "X0000000000002",
    "Levy": 270,
    "NSF": 449.5,
    "Net Pay": 24571.62,
    "New Basic Salary": 25135,
    "Other names": "JEAN MARC",
    "PAYE": 0,
    "PRGF": 1131.08,
    "Surname": "PALMYRE",
    "Total": 0,
    "Total MRA contributions": 3233,
    "Total deductions": 563.38,
    "Travelling": 0,
    "VAT": "12%",
  },
  {
    "Address": "Mauritius",
    "Age 60+": "No",
    "Allowances": 0,
    "BRN": "C1234567",
    "Basic Salary": 31000,
    "CSG": 949.05,
    "Company Name": "ABC Co Ltd",
    "EDF": 390000,
    "EDF (monthly)": 30000,
    "Emoluments": 31635,
    "Full time / Part time": "Full Time",
    "Govt Increment": 635,
    "Gross Pay": 31635,
    "ID": "X0000000000003",
    "Levy": 270,
    "NSF": 449.5,
    "Net Pay": 30974.12,
    "New Basic Salary": 31635,
    "Other names": "ALEX",
    "PAYE": 0,
    "PRGF": 1423.58,
    "Surname": "SAMPLE",
    "Total": 0,
    "Total MRA contributions": 3883,
    "Total deductions": 660.88,
    "Travelling": 0,
    "VAT": "12%",
  },
  {
    "Address": "Mauritius",
    "Age 60+": "No",
    "Allowances": 0,
    "BRN": "C1234567",
    "Basic Salary": 12000,
    "CSG": 379.05,
    "Company Name": "ABC Co Ltd",
    "EDF": 390000,
    "EDF (monthly)": 30000,
    "Emoluments": 12635,
    "Full time / Part time": "Part Time",
    "Govt Increment": 635,
    "Gross Pay": 12635,
    "ID": "X0000000000004",
    "Levy": 270,
    "NSF": 449.5,
    "Net Pay": 12259.12,
    "New Basic Salary": 12635,
    "Other names": "PRIYA",
    "PAYE": 0,
    "PRGF": 568.57,
    "Surname": "EXAMPLE",
    "Total": 0,
    "Total MRA contributions": 1983,
    "Total deductions": 375.88,
    "Travelling": 0,
    "VAT": "12%",
  },
  {
    "Address": "Mauritius",
    "Age 60+": "Yes",
    "Allowances": 0,
    "BRN": "C1234567",
    "Basic Salary": 45000,
    "CSG": 1350,
    "Company Name": "ABC Co Ltd",
    "EDF": 390000,
    "EDF (monthly)": 30000,
    "Emoluments": 45000,
    "Full time / Part time": "Full Time",
    "Govt Increment": 0,
    "Gross Pay": 45000,
    "ID": "X0000000000005",
    "Levy": 270,
    "NSF": 449.5,
    "Net Pay": 44138.64,
    "New Basic Salary": 45000,
    "Other names": "SAM",
    "PAYE": 0,
    "PRGF": 2025,
    "Surname": "TESTER",
    "Total": 0,
    "Total MRA contributions": 5219.5,
    "Total deductions": 861.36,
    "Travelling": 0,
    "VAT": "12%",
  },
  {
    "Address": "Mauritius",
    "Age 60+": "No",
    "Allowances": 0,
    "BRN": "C1234567",
    "Basic Salary": 20500,
    "Bonus": 1500,
    "CSG": 634.05,
    "Company Name": "ABC Co Ltd",
    "EDF": 390000,
    "EDF (monthly)": 30000,
    "Emoluments": 21135,
    "Full time / Part time": "Full Time",
    "Govt Increment": 635,
    "Gross Pay": 21135,
    "ID": "X0000000000006",
    "Levy": 270,
    "NSF": 449.5,
    "Net Pay": 20631.62,
    "New Basic Salary": 21135,
    "Other names": "MARIE",
    "PAYE": 0,
    "PRGF": 951.07,
    "Surname": "FICTIF",
    "Total": 0,
    "Total MRA contributions": 2833,
    "Total deductions": 503.38,
    "Travelling": 0,
    "VAT": "12%",
  },
]
`;

exports[`baseline: the 2026-09 sample > is stored like this by an import 1`] = `
[
  {
    "age_60_plus": false,
    "allowances": 0,
    "basic_salary": 18000,
    "csg": 559.05,
    "edf": 390000,
    "edf_monthly": 30000,
    "emoluments": 18635,
    "employment_type": "Full Time",
    "extra": {},
    "govt_increment": 635,
    "gross_pay": 18635,
    "levy": 270,
    "national_id": "X0000000000001",
    "net_pay": 18169.12,
    "new_basic_salary": 18635,
    "nsf": 449.5,
    "other_names": "JANE",
    "paye": 0,
    "prgf": 838.57,
    "surname": "DOE",
    "total": 0,
    "total_deductions": 465.88,
    "total_mra_contributions": 2583,
    "travelling": 0,
  },
  {
    "age_60_plus": false,
    "allowances": 0,
    "basic_salary": 24500,
    "csg": 754.05,
    "edf": 390000,
    "edf_monthly": 30000,
    "emoluments": 25135,
    "employment_type": "Full Time",
    "extra": {},
    "govt_increment": 635,
    "gross_pay": 25135,
    "levy": 270,
    "national_id": "X0000000000002",
    "net_pay": 24571.62,
    "new_basic_salary": 25135,
    "nsf": 449.5,
    "other_names": "JEAN MARC",
    "paye": 0,
    "prgf": 1131.08,
    "surname": "PALMYRE",
    "total": 0,
    "total_deductions": 563.38,
    "total_mra_contributions": 3233,
    "travelling": 0,
  },
  {
    "age_60_plus": false,
    "allowances": 0,
    "basic_salary": 31000,
    "csg": 949.05,
    "edf": 390000,
    "edf_monthly": 30000,
    "emoluments": 31635,
    "employment_type": "Full Time",
    "extra": {},
    "govt_increment": 635,
    "gross_pay": 31635,
    "levy": 270,
    "national_id": "X0000000000003",
    "net_pay": 30974.12,
    "new_basic_salary": 31635,
    "nsf": 449.5,
    "other_names": "ALEX",
    "paye": 0,
    "prgf": 1423.58,
    "surname": "SAMPLE",
    "total": 0,
    "total_deductions": 660.88,
    "total_mra_contributions": 3883,
    "travelling": 0,
  },
  {
    "age_60_plus": false,
    "allowances": 0,
    "basic_salary": 12000,
    "csg": 379.05,
    "edf": 390000,
    "edf_monthly": 30000,
    "emoluments": 12635,
    "employment_type": "Part Time",
    "extra": {},
    "govt_increment": 635,
    "gross_pay": 12635,
    "levy": 270,
    "national_id": "X0000000000004",
    "net_pay": 12259.12,
    "new_basic_salary": 12635,
    "nsf": 449.5,
    "other_names": "PRIYA",
    "paye": 0,
    "prgf": 568.57,
    "surname": "EXAMPLE",
    "total": 0,
    "total_deductions": 375.88,
    "total_mra_contributions": 1983,
    "travelling": 0,
  },
  {
    "age_60_plus": true,
    "allowances": 0,
    "basic_salary": 45000,
    "csg": 1350,
    "edf": 390000,
    "edf_monthly": 30000,
    "emoluments": 45000,
    "employment_type": "Full Time",
    "extra": {},
    "govt_increment": 0,
    "gross_pay": 45000,
    "levy": 270,
    "national_id": "X0000000000005",
    "net_pay": 44138.64,
    "new_basic_salary": 45000,
    "nsf": 449.5,
    "other_names": "SAM",
    "paye": 0,
    "prgf": 2025,
    "surname": "TESTER",
    "total": 0,
    "total_deductions": 861.36,
    "total_mra_contributions": 5219.5,
    "travelling": 0,
  },
  {
    "age_60_plus": false,
    "allowances": 0,
    "basic_salary": 20500,
    "csg": 634.05,
    "edf": 390000,
    "edf_monthly": 30000,
    "emoluments": 21135,
    "employment_type": "Full Time",
    "extra": {
      "Bonus": 1500,
    },
    "govt_increment": 635,
    "gross_pay": 21135,
    "levy": 270,
    "national_id": "X0000000000006",
    "net_pay": 20631.62,
    "new_basic_salary": 21135,
    "nsf": 449.5,
    "other_names": "MARIE",
    "paye": 0,
    "prgf": 951.07,
    "surname": "FICTIF",
    "total": 0,
    "total_deductions": 503.38,
    "total_mra_contributions": 2833,
    "travelling": 0,
  },
]
`;

exports[`baseline: the 2026-10 sample > is sent like this to an app from a saved run 1`] = `
[
  {
    "Address": "Mauritius",
    "Age 60+": "No",
    "Allowances": 0,
    "BRN": "C1234567",
    "Basic Salary": 18000,
    "CSG": 559.05,
    "Company Name": "ABC Co Ltd",
    "EDF": 390000,
    "EDF (monthly)": 30000,
    "Emoluments": 18635,
    "Full time / Part time": "Full Time",
    "Govt Increment": 635,
    "Gross Pay": 18635,
    "ID": "X0000000000001",
    "Levy": 270,
    "NSF": 449.5,
    "Net Pay": 18169.12,
    "New Basic Salary": 18635,
    "Other names": "JANE",
    "PAYE": 0,
    "PRGF": 838.57,
    "Surname": "DOE",
    "Total": 0,
    "Total MRA contributions": 2583,
    "Total deductions": 465.88,
    "Travelling": 0,
    "VAT": "12%",
  },
  {
    "Address": "Mauritius",
    "Age 60+": "No",
    "Allowances": 0,
    "BRN": "C1234567",
    "Basic Salary": 24500,
    "CSG": 754.05,
    "Company Name": "ABC Co Ltd",
    "EDF": 390000,
    "EDF (monthly)": 30000,
    "Emoluments": 25135,
    "Full time / Part time": "Full Time",
    "Govt Increment": 635,
    "Gross Pay": 25135,
    "ID": "X0000000000002",
    "Levy": 270,
    "NSF": 449.5,
    "Net Pay": 24571.62,
    "New Basic Salary": 25135,
    "Other names": "JEAN MARC",
    "PAYE": 0,
    "PRGF": 1131.08,
    "Surname": "PALMYRE-DUPONT",
    "Total": 0,
    "Total MRA contributions": 3233,
    "Total deductions": 563.38,
    "Travelling": 0,
    "VAT": "12%",
  },
  {
    "Address": "Mauritius",
    "Age 60+": "No",
    "Allowances": 0,
    "BRN": "C1234567",
    "Basic Salary": 31000,
    "CSG": 949.05,
    "Company Name": "ABC Co Ltd",
    "EDF": 390000,
    "EDF (monthly)": 30000,
    "Emoluments": 31635,
    "Full time / Part time": "Full Time",
    "Govt Increment": 635,
    "Gross Pay": 31635,
    "ID": "X0000000000003",
    "Levy": 270,
    "NSF": 449.5,
    "Net Pay": 30974.12,
    "New Basic Salary": 31635,
    "Other names": "ALEX",
    "PAYE": 0,
    "PRGF": 1423.58,
    "Surname": "SAMPLE",
    "Total": 0,
    "Total MRA contributions": 3883,
    "Total deductions": 660.88,
    "Travelling": 0,
    "VAT": "12%",
  },
  {
    "Address": "Mauritius",
    "Age 60+": "Yes",
    "Allowances": 0,
    "BRN": "C1234567",
    "Basic Salary": 45000,
    "CSG": 1350,
    "Company Name": "ABC Co Ltd",
    "EDF": 390000,
    "EDF (monthly)": 30000,
    "Emoluments": 45000,
    "Full time / Part time": "Full Time",
    "Govt Increment": 0,
    "Gross Pay": 45000,
    "ID": "X0000000000005",
    "Levy": 270,
    "NSF": 449.5,
    "Net Pay": 44138.64,
    "New Basic Salary": 45000,
    "Other names": "SAM",
    "PAYE": 0,
    "PRGF": 2025,
    "Surname": "TESTER",
    "Total": 0,
    "Total MRA contributions": 5219.5,
    "Total deductions": 861.36,
    "Travelling": 0,
    "VAT": "12%",
  },
  {
    "Address": "Mauritius",
    "Age 60+": "No",
    "Allowances": 0,
    "BRN": "C1234567",
    "Basic Salary": 20500,
    "Bonus": 1500,
    "CSG": 634.05,
    "Company Name": "ABC Co Ltd",
    "EDF": 390000,
    "EDF (monthly)": 30000,
    "Emoluments": 21135,
    "Full time / Part time": "Full Time",
    "Govt Increment": 635,
    "Gross Pay": 21135,
    "ID": "X0000000000006",
    "Levy": 270,
    "NSF": 449.5,
    "Net Pay": 20631.62,
    "New Basic Salary": 21135,
    "Other names": "MARIE",
    "PAYE": 0,
    "PRGF": 951.07,
    "Surname": "FICTIF",
    "Total": 0,
    "Total MRA contributions": 2833,
    "Total deductions": 503.38,
    "Travelling": 0,
    "VAT": "12%",
  },
  {
    "Address": "Mauritius",
    "Age 60+": "No",
    "Allowances": 0,
    "BRN": "C1234567",
    "Basic Salary": 19000,
    "CSG": 589.05,
    "Company Name": "ABC Co Ltd",
    "EDF": 390000,
    "EDF (monthly)": 30000,
    "Emoluments": 19635,
    "Full time / Part time": "Full Time",
    "Govt Increment": 635,
    "Gross Pay": 19635,
    "ID": "X0000000000007",
    "Levy": 270,
    "NSF": 449.5,
    "Net Pay": 19154.12,
    "New Basic Salary": 19635,
    "Other names": "LEA",
    "PAYE": 0,
    "PRGF": 883.57,
    "Surname": "NOUVEAU",
    "Total": 0,
    "Total MRA contributions": 2683,
    "Total deductions": 480.88,
    "Travelling": 0,
    "VAT": "12%",
  },
]
`;

exports[`baseline: the 2026-10 sample > is stored like this by an import 1`] = `
[
  {
    "age_60_plus": false,
    "allowances": 0,
    "basic_salary": 18000,
    "csg": 559.05,
    "edf": 390000,
    "edf_monthly": 30000,
    "emoluments": 18635,
    "employment_type": "Full Time",
    "extra": {},
    "govt_increment": 635,
    "gross_pay": 18635,
    "levy": 270,
    "national_id": "X0000000000001",
    "net_pay": 18169.12,
    "new_basic_salary": 18635,
    "nsf": 449.5,
    "other_names": "JANE",
    "paye": 0,
    "prgf": 838.57,
    "surname": "DOE",
    "total": 0,
    "total_deductions": 465.88,
    "total_mra_contributions": 2583,
    "travelling": 0,
  },
  {
    "age_60_plus": false,
    "allowances": 0,
    "basic_salary": 24500,
    "csg": 754.05,
    "edf": 390000,
    "edf_monthly": 30000,
    "emoluments": 25135,
    "employment_type": "Full Time",
    "extra": {},
    "govt_increment": 635,
    "gross_pay": 25135,
    "levy": 270,
    "national_id": "X0000000000002",
    "net_pay": 24571.62,
    "new_basic_salary": 25135,
    "nsf": 449.5,
    "other_names": "JEAN MARC",
    "paye": 0,
    "prgf": 1131.08,
    "surname": "PALMYRE-DUPONT",
    "total": 0,
    "total_deductions": 563.38,
    "total_mra_contributions": 3233,
    "travelling": 0,
  },
  {
    "age_60_plus": false,
    "allowances": 0,
    "basic_salary": 31000,
    "csg": 949.05,
    "edf": 390000,
    "edf_monthly": 30000,
    "emoluments": 31635,
    "employment_type": "Full Time",
    "extra": {},
    "govt_increment": 635,
    "gross_pay": 31635,
    "levy": 270,
    "national_id": "X0000000000003",
    "net_pay": 30974.12,
    "new_basic_salary": 31635,
    "nsf": 449.5,
    "other_names": "ALEX",
    "paye": 0,
    "prgf": 1423.58,
    "surname": "SAMPLE",
    "total": 0,
    "total_deductions": 660.88,
    "total_mra_contributions": 3883,
    "travelling": 0,
  },
  {
    "age_60_plus": true,
    "allowances": 0,
    "basic_salary": 45000,
    "csg": 1350,
    "edf": 390000,
    "edf_monthly": 30000,
    "emoluments": 45000,
    "employment_type": "Full Time",
    "extra": {},
    "govt_increment": 0,
    "gross_pay": 45000,
    "levy": 270,
    "national_id": "X0000000000005",
    "net_pay": 44138.64,
    "new_basic_salary": 45000,
    "nsf": 449.5,
    "other_names": "SAM",
    "paye": 0,
    "prgf": 2025,
    "surname": "TESTER",
    "total": 0,
    "total_deductions": 861.36,
    "total_mra_contributions": 5219.5,
    "travelling": 0,
  },
  {
    "age_60_plus": false,
    "allowances": 0,
    "basic_salary": 20500,
    "csg": 634.05,
    "edf": 390000,
    "edf_monthly": 30000,
    "emoluments": 21135,
    "employment_type": "Full Time",
    "extra": {
      "Bonus": 1500,
    },
    "govt_increment": 635,
    "gross_pay": 21135,
    "levy": 270,
    "national_id": "X0000000000006",
    "net_pay": 20631.62,
    "new_basic_salary": 21135,
    "nsf": 449.5,
    "other_names": "MARIE",
    "paye": 0,
    "prgf": 951.07,
    "surname": "FICTIF",
    "total": 0,
    "total_deductions": 503.38,
    "total_mra_contributions": 2833,
    "travelling": 0,
  },
  {
    "age_60_plus": false,
    "allowances": 0,
    "basic_salary": 19000,
    "csg": 589.05,
    "edf": 390000,
    "edf_monthly": 30000,
    "emoluments": 19635,
    "employment_type": "Full Time",
    "extra": {},
    "govt_increment": 635,
    "gross_pay": 19635,
    "levy": 270,
    "national_id": "X0000000000007",
    "net_pay": 19154.12,
    "new_basic_salary": 19635,
    "nsf": 449.5,
    "other_names": "LEA",
    "paye": 0,
    "prgf": 883.57,
    "surname": "NOUVEAU",
    "total": 0,
    "total_deductions": 480.88,
    "total_mra_contributions": 2683,
    "travelling": 0,
  },
]
`;

exports[`baseline: the app registry > lists these apps, with these data types and expected fields 1`] = `
[
  {
    "accepts": [],
    "expectedFields": [],
    "id": "payroll",
    "name": "Payroll System",
    "produces": [
      "payroll-result",
    ],
    "protocolVersion": 1,
    "status": "active",
    "url": "https://noor1290.github.io/payroll_sys/",
  },
  {
    "accepts": [
      "payroll-result",
    ],
    "expectedFields": [
      "ID | string | required | sensitive",
      "Surname | string | required",
      "Other names | string",
      "Basic Salary | number | required | sensitive",
      "Govt Increment | number | required | sensitive",
      "New Basic Salary | number | required | sensitive",
      "Full time / Part time | string",
      "Allowances | number | required | sensitive",
      "Emoluments | number | required | sensitive",
      "Travelling | number | required | sensitive",
      "Gross Pay | number | required | sensitive",
      "Age 60+ | boolean | required",
      "CSG | number | required | sensitive",
      "NSF | number | required | sensitive",
      "PAYE | number | required | sensitive",
      "Total deductions | number | required | sensitive",
      "Net Pay | number | required | sensitive",
      "Levy | number | required | sensitive",
      "PRGF | number | required | sensitive",
      "Total MRA contributions | number | required | sensitive",
      "EDF | number | required | sensitive",
      "EDF (monthly) | number | required | sensitive",
      "Total | number | required | sensitive",
      "Company Name | string | required",
      "Address | string",
      "BRN | string | required",
      "VAT | string",
    ],
    "id": "pdf-editor",
    "name": "PDF Form Filler",
    "produces": [],
    "protocolVersion": 1,
    "status": "active",
    "url": "https://noor1290.github.io/pdf-form-filler/",
  },
  {
    "accepts": [
      "payroll-result",
    ],
    "expectedFields": [
      "ID | string | required | sensitive",
      "Surname | string | required",
      "Other names | string",
      "Basic Salary | number | required | sensitive",
      "Govt Increment | number | required | sensitive",
      "New Basic Salary | number | required | sensitive",
      "Full time / Part time | string",
      "Allowances | number | required | sensitive",
      "Emoluments | number | required | sensitive",
      "Travelling | number | required | sensitive",
      "Gross Pay | number | required | sensitive",
      "Age 60+ | boolean | required",
      "CSG | number | required | sensitive",
      "NSF | number | required | sensitive",
      "PAYE | number | required | sensitive",
      "Total deductions | number | required | sensitive",
      "Net Pay | number | required | sensitive",
      "Levy | number | required | sensitive",
      "PRGF | number | required | sensitive",
      "Total MRA contributions | number | required | sensitive",
      "EDF | number | required | sensitive",
      "EDF (monthly) | number | required | sensitive",
      "Total | number | required | sensitive",
      "Company Name | string | required",
      "Address | string",
      "BRN | string | required",
      "VAT | string",
    ],
    "id": "payslip",
    "name": "Payslip Automation",
    "produces": [],
    "protocolVersion": 1,
    "status": "coming-soon",
    "url": "",
  },
]
`;
